--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/content_main"
     android:layout_width="match_parent"
@@ -8,13 +7,34 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    android:paddingTop="100dp"
+    android:orientation="vertical"
     tools:context="com.user.example.regressionapp.MainActivity"
     tools:showIn="@layout/activity_main">
 
     <TextView
+        android:id="@+id/text_test"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!" />
-</RelativeLayout>
+
+    <View
+        android:layout_width="30dp"
+        android:layout_height="30dp"/>
+
+    <Button
+        android:id="@+id/button_test1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="start async"/>
+
+    <View
+        android:layout_width="30dp"
+        android:layout_height="30dp"/>
+
+    <Button
+        android:id="@+id/button_test2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="cancel async"/>
+</LinearLayout>
