--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -37,6 +37,12 @@
             android:layout_height="wrap_content"
             android:text="@string/show_calc"/>
 
+        <Button
+            android:id="@+id/button_show_2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/show_2"/>
+
     </LinearLayout>
 
     <LinearLayout
