--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -21,6 +21,20 @@
             android:layout_width="30dp"
             android:layout_height="30dp"/>
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/test_col"/>
+
+        <EditText
+            android:id="@+id/edit_count"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content" />
+
+        <View
+            android:layout_width="30dp"
+            android:layout_height="30dp"/>
+
         <Button
             android:id="@+id/button_calc"
             android:layout_width="wrap_content"
